style: .toList()로 변경하여 코드 간결화